--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.5.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
