--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/observerly"
   },
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/polaris.umd.js",
+  "module": "./dist/polaris.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/polaris.es.js",
+      "require": "./dist/polaris.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "path": "^0.12.7",
     "prettier": "2.5.1",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vitest": "^0.0.129"
   }
 }
