--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
     "test": "vitest"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/node": "^17.0.7",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
