chore: Updated build process options.
chore: updated various build process options vite.config.ts rollupOptions to enable sourcemap outputting. Added output declaration files to true in tsconfig.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,11 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
+    "declaration": true,
     "moduleResolution": "Node",
     "strict": true,
     "sourceMap": true,
+    "outDir": "dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noEmit": true,
