--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "path": "^0.12.7",
     "prettier": "2.5.1",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vitest": "^0.1.24"
