--- a/package.json
+++ b/package.json
@@ -34,11 +34,25 @@
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.8",
     "path": "^0.12.7",
     "prettier": "2.5.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vitest": "^0.1.24"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write .",
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
