--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "prettier --write .",
+      "prettier --write",
       "eslint --fix",
-      "git add"
+      "git add -A ."
     ]
   }
 }
