--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,11 @@ name: polaris/publish
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*.*.*'
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   ci:
