--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-typescript": "^9.0.1",
     "@types/node": "^17.0.32",
     "c8": "^7.11.2",
     "eslint": "^8.15.0",
@@ -38,10 +38,11 @@
     "lint-staged": "^12.3.8",
     "path": "^0.12.7",
     "prettier": "2.5.1",
+    "rollup": "^3.2.3",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^2.9.8",
-    "vitest": "^0.12.4"
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3"
   },
   "husky": {
     "hooks": {
