--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^9.0.1",
     "@types/node": "^17.0.32",
+    "@vitest/coverage-c8": "^0.27.0",
     "c8": "^7.11.2",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
