--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "@rollup/plugin-typescript": "^9.0.1",
     "@types/node": "^17.0.32",
     "@vitest/coverage-c8": "^0.27.0",
