--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@rollup/plugin-typescript": "^9.0.1",
-    "@types/node": "^17.0.32",
     "@vitest/coverage-c8": "^0.27.0",
     "c8": "^7.11.2",
     "eslint": "^8.15.0",
@@ -42,7 +41,7 @@
     "prettier": "2.5.1",
     "rollup": "^3.2.3",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
+    "typescript": "4.9.5",
     "vite": "^3.1.8",
     "vitest": "^0.24.3"
   },
